--- a/ieeeiemsb/assets/css/style.css
+++ b/ieeeiemsb/assets/css/style.css
@@ -600,9 +600,9 @@ p {
 ===========================*/
 /*===== NAVBAR EIGHT =====*/
 .navbar-area {
-  background: -webkit-linear-gradient(left, #43cae9 0%, #38f9d7 100%);
-  background: -o-linear-gradient(left, #43cae9 0%, #38f9d7 100%);
-  background: linear-gradient(to right, #43cae9 0%, #38f9d7 100%);
+  background: -webkit-linear-gradient(left, #041862 0%, #5883e3 100%);
+  background: -o-linear-gradient(left, #041862 0%, #5883e3 100%);
+  background: linear-gradient(to right, #041862 0%, #5883e3 100%);
   padding: 10px 0;
   position: absolute;
   top: 0;
@@ -2228,7 +2228,7 @@ p {
         -o-transition: all 0.3s ease-out 0s;
         transition: all 0.3s ease-out 0s; }
         .footer-area .footer-widget .footer-link ul li a:hover {
-          color: #38f9d7; }
+          color: #041862; }
 .footer-area .footer-copyright {
   padding-top: 13px;
   padding-bottom: 23px; }
@@ -2248,7 +2248,7 @@ p {
       -o-transition: all 0.3s ease-out 0s;
       transition: all 0.3s ease-out 0s; }
       .footer-area .footer-copyright .social li a:hover {
-        color: #38f9d7; }
+        color: #041862; }
 .footer-area.footer-dark {
   background-color: #121212; }
   .footer-area.footer-dark .footer-widget .footer-title {
@@ -2256,13 +2256,13 @@ p {
   .footer-area.footer-dark .footer-widget .footer-link ul li a {
     color: #fff; }
     .footer-area.footer-dark .footer-widget .footer-link ul li a:hover {
-      color: #38f9d7; }
+      color: #041862; }
   .footer-area.footer-dark .footer-copyright .copyright .text {
     color: #fff; }
   .footer-area.footer-dark .footer-copyright .social li a {
     color: #fff; }
     .footer-area.footer-dark .footer-copyright .social li a:hover {
-      color: #38f9d7; }
+      color: #041862; }
 
 /*===== BACK TO TOP =====*/
 .back-to-top {
@@ -2275,7 +2275,7 @@ p {
   height: 45px;
   line-height: 45px;
   border-radius: 50%;
-  background-color: #38f9d7;
+  background-color: #5883e3;
   text-align: center;
   z-index: 99;
   -webkit-transition: all 0.3s ease-out 0s;
@@ -2286,6 +2286,12 @@ p {
   display: none; }
   .back-to-top:hover {
     color: #121212;
-    background-color: #38f9d7; }
+    background-color: #041862; }
 
 /*# sourceMappingURL=style.css.map */
+#up-icon{
+  color: whitesmoke
+}
+#nav-toggler-web{
+  display: none;
+}
